--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,5 +7,67 @@
 
 * {
     font-family: "Inter", sans-serif;
+    box-sizing: border-box;
 }
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #020617;
+    color: #FFFFFF;
+}
+
+a {
+    color: inherit;
+}
+
+/* Ayuda visual para las secciones */
+.section, .hero {
+    padding: 3rem 1.5rem;
+}
+
+/* ==== NAVBAR ==== */
+.site-header{
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background-color: #020617;
+    z-index: 1000;
+    border-bottom: 1px solid #333;
+}
+
+/* logo + texto dentro de navbar */
+.navb__logo {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+.nav__logo img {
+    width: 40px;
+    height: 40px;
+    border-radius: 999px;
+    object-fit: cover;
+}
+
+/* Menu de navegacion */
+.nav__menu {
+    display: flex;
+    gap: 2rem;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__menu a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+.nav__menu a:hover {
+    color: #1E90FF;
+}
+
+
 
